--- a/ABC/lab5/CMakeLists.txt
+++ b/ABC/lab5/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.15)
-project(lab5)
+project(lab5 C)
 
-set(CMAKE_CXX_STANDARD 17)
+set(CMAKE_C_STANDARD 11)
 
-add_executable(lab5 main.cpp BLAS.cpp BLAS.h)
+add_executable(lab5 main.c BLAS.c BLAS.h)
