--- a/ABC/lab5/CMakeLists.txt
+++ b/ABC/lab5/CMakeLists.txt
@@ -1,10 +1,10 @@
 cmake_minimum_required(VERSION 3.15)
-project(lab5 C)
+project(lab5)
 
-set(CMAKE_C_STANDARD 11)
+set(CMAKE_CXX_STANDARD 17)
 
 find_library(PTHREAD_LIBRARY pthread)
 
-add_executable(lab5 main.c BLAS.c BLAS.h)
+add_executable(lab5 main.cpp BLAS.cpp BLAS.h)
 
 target_link_libraries(lab5 ${PTHREAD_LIBRARY})
